@@ -1,4 +1,4 @@
-.TH SDPARM "8" "November 2017" "sdparm\-1.11" SDPARM
+.TH SDPARM "8" "December 2017" "sdparm\-1.11" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
@@ -934,3 +934,5 @@ http://sg.danny.cz/sg/sdparm.html .
 .B hdparm(hdparm),
 .B sg_modes, sg_wr_mode, sginfo, sg_inq, sg_vpd(all in sg3_utils),
 .B smartmontools(smartmontools.sourceforge.net), mt, eject(eject),
+
+
